--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- <link rel="stylesheet" href="css/progressive-image.css"> -->
-  <link rel="stylesheet" href="css/style.min.css?v=29">
+  <link rel="stylesheet" href="css/style.min.css?v=30">
   <title>Дело Банка Восточный</title>
 </head>
 
@@ -28,7 +28,7 @@
       </div>
       <nav class="menu-nav">
         <a href="index.html" class="menu-nav__item current ">Таймлайн событий</a>
-        <a href="#" class="menu-nav__item">Архив документов</a>
+        <a href="archive.html" class="menu-nav__item">Архив документов</a>
         <a href="#" class="menu-nav__item">Вопрос&nbsp;&mdash; ответ</a>
         <a href="#" class="menu-nav__item">Фактчек</a>
       </nav>
@@ -56,7 +56,7 @@
       </div>
       <nav class="header-nav">
         <a href="index.html" class="header-nav__item current ">Таймлайн событий</a>
-        <a href="#" class="header-nav__item">Архив документов</a>
+        <a href="archive.html" class="header-nav__item">Архив документов</a>
         <a href="#" class="header-nav__item">Вопрос&nbsp;&mdash; ответ</a>
         <a href="#" class="header-nav__item">Фактчек</a>
       </nav>
