--- a/archive.html
+++ b/archive.html
@@ -115,7 +115,7 @@
                 loan can&rsquo;t be&nbsp;deemed &laquo;embezzlement&raquo;.
               </p>
             </div>
-            <a href="#" class="archive-item__btn">
+            <a href="event.html" class="archive-item__btn">
               <span>Подробнее</span>
               <img src="img/icons/more-icon.svg" alt="Подробнее">
             </a>
@@ -135,7 +135,7 @@
                 finally repaid in&nbsp;the February 2017&nbsp;settlement.
               </p>
             </div>
-            <a href="#" class="archive-item__btn">
+            <a href="event.html" class="archive-item__btn">
               <span>Подробнее</span>
               <img src="img/icons/more-icon.svg" alt="Подробнее">
             </a>
@@ -159,7 +159,7 @@
                 supersede the charter and regulate all governance issues.
               </p>
             </div>
-            <a href="#" class="archive-item__btn">
+            <a href="event.html" class="archive-item__btn">
               <span>Подробнее</span>
               <img src="img/icons/more-icon.svg" alt="Подробнее">
             </a>
@@ -183,7 +183,7 @@
                 supersede the charter and regulate all governance issues.
               </p>
             </div>
-            <a href="#" class="archive-item__btn">
+            <a href="event.html" class="archive-item__btn">
               <span>Подробнее</span>
               <img src="img/icons/more-icon.svg" alt="Подробнее">
             </a>
