--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- <link rel="stylesheet" href="css/progressive-image.css"> -->
-  <link rel="stylesheet" href="css/style.min.css?v=31">
+  <link rel="stylesheet" href="css/style.min.css?v=32">
   <title>Дело Банка Восточный</title>
 </head>
 
@@ -131,14 +131,50 @@
       </div>
     </section>
 
+    <div class="section about">
+      <div class="wrap">
+        <div class="about-wrap">
+          <h2 class="about-title">Заголовок</h2>
+          <div class="about-text">
+            <p>
+              Разнообразный и богатый опыт дальнейшее развитие различных форм деятельности влечет за собой процесс
+              внедрения и модернизации форм развития. Повседневная практика показывает, что новая модель организационной
+              деятельности позволяет оценить значение соответствующий условий активизации. Значимость этих проблем
+              настолько очевидна, что дальнейшее развитие различных форм деятельности требуют определения и уточнения
+              форм развития.
+            </p>
+            <p>
+              Равным образом начало повседневной работы по формированию позиции требуют определения и уточнения новых
+              предложений. Товарищи! дальнейшее развитие различных форм деятельности требуют от нас анализа направлений
+              прогрессивного развития. Значимость этих проблем настолько очевидна, что начало повседневной работы по
+              формированию позиции требуют определения и уточнения направлений прогрессивного развития.
+            </p>
+          </div>
+
+          <span class="about-subtitle">Подзаголовок</span>
+          <div class="about-text">
+            <p>
+              Разнообразный и богатый опыт дальнейшее развитие различных форм деятельности влечет за собой процесс
+              внедрения и модернизации форм развития. Повседневная практика показывает, что новая модель организационной
+              деятельности позволяет оценить значение соответствующий условий активизации. Значимость этих проблем
+              настолько очевидна, что дальнейшее развитие различных форм деятельности требуют определения и уточнения
+              форм развития.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <section class="chronology">
 
       <div class="chronology-nav">
         <div class="chronology-nav__wrap">
 
 
-          <div data-href="#news2011-2014" class="chronology-nav__item current new"> <span> 2011-2014</span> <img src="img/icons/new-icon.svg" alt="NEW" class="new-icon"> </div>
-          <div data-href="#news2015" class="chronology-nav__item new"><span>2015</span> <img src="img/icons/new-icon.svg" alt="NEW" class="new-icon"></div>
+          <div data-href="#news2011-2014" class="chronology-nav__item current new"> <span> 2011-2014</span> <img
+              src="img/icons/new-icon.svg" alt="NEW" class="new-icon"> </div>
+          <div data-href="#news2015" class="chronology-nav__item new"><span>2015</span> <img
+              src="img/icons/new-icon.svg" alt="NEW" class="new-icon"></div>
           <div data-href="#news2016" class="chronology-nav__item"><span>2016</span></div>
           <div data-href="#news2018" class="chronology-nav__item"><span>2018</span></div>
           <div data-href="#news2019" class="chronology-nav__item"><span>2019</span></div>
@@ -560,7 +596,7 @@
 
   </main>
   <script src="js/jquery.js"></script>
-  <script src="js/main.js?v=4"></script>
+  <script src="js/main.js?v=5"></script>
   <!-- <script src="https://cdn.jsdelivr.net/npm/progressive-image.js/dist/progressive-image.js"></script> -->
 
 </body>
