--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- <link rel="stylesheet" href="css/progressive-image.css"> -->
-  <link rel="stylesheet" href="css/style.min.css?v=32">
+  <link rel="stylesheet" href="css/style.min.css?v=33">
   <title>Дело Банка Восточный</title>
 </head>
 
@@ -171,8 +171,7 @@
         <div class="chronology-nav__wrap">
 
 
-          <div data-href="#news2011-2014" class="chronology-nav__item current new"> <span> 2011-2014</span> <img
-              src="img/icons/new-icon.svg" alt="NEW" class="new-icon"> </div>
+          <div data-href="#news2011-2014" class="chronology-nav__item current"> <span> 2011-2014</span></div>
           <div data-href="#news2015" class="chronology-nav__item new"><span>2015</span> <img
               src="img/icons/new-icon.svg" alt="NEW" class="new-icon"></div>
           <div data-href="#news2016" class="chronology-nav__item"><span>2016</span></div>
@@ -596,7 +595,7 @@
 
   </main>
   <script src="js/jquery.js"></script>
-  <script src="js/main.js?v=5"></script>
+  <script src="js/main.js?v=6"></script>
   <!-- <script src="https://cdn.jsdelivr.net/npm/progressive-image.js/dist/progressive-image.js"></script> -->
 
 </body>
