--- a/404.html
+++ b/404.html
@@ -27,7 +27,7 @@
       <nav class="menu-nav">
         <a href="index.html" class="menu-nav__item ">Таймлайн событий</a>
         <a href="archive.html" class="menu-nav__item current">Архив документов</a>
-        <a href="#" class="menu-nav__item">Вопрос&nbsp;&mdash; ответ</a>
+        <a href="FAQ.html" class="menu-nav__item">Вопрос&nbsp;&mdash; ответ</a>
         <a href="#" class="menu-nav__item">Фактчек</a>
       </nav>
       <div class="menu-share">
@@ -52,7 +52,7 @@
       <nav class="header-nav">
         <a href="index.html" class="header-nav__item ">Таймлайн событий</a>
         <a href="archive.html" class="header-nav__item current">Архив документов</a>
-        <a href="#" class="header-nav__item">Вопрос&nbsp;&mdash; ответ</a>
+        <a href="FAQ.html" class="header-nav__item">Вопрос&nbsp;&mdash; ответ</a>
         <a href="#" class="header-nav__item">Фактчек</a>
       </nav>
       <div class="header-search js-toSearch">
