--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- <link rel="stylesheet" href="css/progressive-image.css"> -->
-  <link rel="stylesheet" href="css/style.min.css?v=33">
+  <link rel="stylesheet" href="css/style.min.css?v=34">
   <title>Дело Банка Восточный</title>
 </head>
 
@@ -312,7 +312,7 @@
                   <img src="img/icons/rbc-icon.svg" alt="РБК">
                   <span>
                     ЦБ проверит активы банков в иностранных депозитариях
-                    <div class="src"><a href="https://www.rbc.ru/">РБК</a></div>
+                    <span class="src"><a href="https://www.rbc.ru/">РБК</a></span>
 
 
                   </span>
@@ -323,9 +323,9 @@
                   <img src="img/icons/news-icon.svg" alt="Ведомости">
                   <span>
                     ЦБ проверяет портфели ценных бумаг у банков, которые держат их в зарубежных депозитариях
-                    <div class="src">
+                    <span class="src">
                       <a href="https://www.vedomosti.ru/">Ведомости</a>
-                    </div>
+                    </span>
                   </span>
 
                 </div>
