--- a/event.html
+++ b/event.html
@@ -42,7 +42,7 @@
       </div>
     </div>
   </div>
-  <header class="header fixed">
+  <header class="header fixed white">
     <div class="wrap-fluid">
       <div class="header-burger">
         <span></span>
