--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- <link rel="stylesheet" href="css/progressive-image.css"> -->
-  <link rel="stylesheet" href="css/style.min.css?v=34">
+  <link rel="stylesheet" href="css/style.min.css?v=35">
   <title>Дело Банка Восточный</title>
 </head>
 
@@ -274,19 +274,21 @@
                 </p>
 
               </div>
-              <div class="chronology-docs">
-                <span class="chronology-docs__title">Подтверждающие документы</span>
 
-                <div class="chronology-docs__item">
-                  <img src="img/icons/pdf-icon.svg" alt="PDF-файл">
+              <div class="chronology-info">
+                <span class="chronology-info__title">Подробнее о событиях</span>
+
+                <div class="chronology-info__item">
                   <span>
-                    Email Kordichev to OEB board of directors regarding BCS transaction for treasury shares.
+                    BCS/PKB Story 2014-2015
                   </span>
-                  <a href="#" class="download">
-                    <span>Скачать</span>
-                    <img src="img/icons/download-icon_white.svg" alt="Скачать">
+                  <a href="event.html" class="chronology-info__btn">
+                    Перейти
                   </a>
                 </div>
+
+  
+
               </div>
             </div>
           </div>
@@ -362,43 +364,38 @@
                   на&nbsp;5&nbsp;млрд руб.
                 </p>
               </div>
-              <div class="chronology-docs">
-                <span class="chronology-docs__title">Подтверждающие документы</span>
 
-                <div class="chronology-docs__item">
-                  <img src="img/icons/pdf-icon.svg" alt="PDF-файл">
+              <div class="chronology-info">
+                <span class="chronology-info__title">Подробнее о событиях</span>
+
+                <div class="chronology-info__item">
                   <span>
-                    Email Kordichev to OEB board of directors regarding BCS transaction for treasury shares.
+                    BCS/PKB Story 2014-2015
                   </span>
-                  <a href="#" class="download">
-                    <span>Скачать</span>
-                    <img src="img/icons/download-icon.svg" alt="Скачать">
+                  <a href="event.html" class="chronology-info__btn">
+                    Перейти
                   </a>
                 </div>
 
-                <div class="chronology-docs__item">
-                  <img src="img/icons/photo-icon.svg" alt="Фото">
+                <div class="chronology-info__item">
                   <span>
-                    Credit Support Agreement (CSA) among BCS Cyprus, _______ and Vostochny Bank (Note that agreement was
-                    already signed by Bank on __ October 2014, before the Bank’s board approved the transaction.)
+                    BCS/PKB Story 2014-2015
                   </span>
-                  <a href="#" class="download">
-                    <span>Скачать</span>
-                    <img src="img/icons/download-icon.svg" alt="Скачать">
+                  <a href="event.html" class="chronology-info__btn">
+                    Перейти
                   </a>
                 </div>
 
-                <div class="chronology-docs__item">
-                  <img src="img/icons/pdf-icon.svg" alt="PDF-файл">
+                <div class="chronology-info__item">
                   <span>
-                    Collateral Account Control Agreement among BCS, Balakus, Danofe (affiliated BCS entity) and Bank
-                    Vostochny.
+                    BCS/PKB Story 2014-2015
                   </span>
-                  <a href="#" class="download">
-                    <span>Скачать</span>
-                    <img src="img/icons/download-icon.svg" alt="Скачать">
+                  <a href="event.html" class="chronology-info__btn">
+                    Перейти
                   </a>
                 </div>
+
+
               </div>
             </div>
           </div>
@@ -415,44 +412,7 @@
                   expedita eveniet!
                 </p>
               </div>
-              <div class="chronology-docs">
-                <span class="chronology-docs__title">Подтверждающие документы</span>
 
-                <div class="chronology-docs__item">
-                  <img src="img/icons/pdf-icon.svg" alt="PDF-файл">
-                  <span>
-                    Email Kordichev to OEB board of directors regarding BCS transaction for treasury shares.
-                  </span>
-                  <a href="#" class="download">
-                    <span>Скачать</span>
-                    <img src="img/icons/download-icon.svg" alt="Скачать">
-                  </a>
-                </div>
-
-                <div class="chronology-docs__item">
-                  <img src="img/icons/photo-icon.svg" alt="Фото">
-                  <span>
-                    Credit Support Agreement (CSA) among BCS Cyprus, _______ and Vostochny Bank (Note that agreement was
-                    already signed by Bank on __ October 2014, before the Bank’s board approved the transaction.)
-                  </span>
-                  <a href="#" class="download">
-                    <span>Скачать</span>
-                    <img src="img/icons/download-icon.svg" alt="Скачать">
-                  </a>
-                </div>
-
-                <div class="chronology-docs__item">
-                  <img src="img/icons/pdf-icon.svg" alt="PDF-файл">
-                  <span>
-                    Collateral Account Control Agreement among BCS, Balakus, Danofe (affiliated BCS entity) and Bank
-                    Vostochny.
-                  </span>
-                  <a href="#" class="download">
-                    <span>Скачать</span>
-                    <img src="img/icons/download-icon.svg" alt="Скачать">
-                  </a>
-                </div>
-              </div>
             </div>
           </div>
 
@@ -481,48 +441,7 @@
                   expedita eveniet!
                 </p>
               </div>
-              <div class="chronology-docs">
-                <span class="chronology-docs__title">Подтверждающие документы</span>
 
-                <div class="chronology-docs__item">
-                  <img src="img/icons/pdf-icon.svg" alt="PDF-файл">
-                  <span>
-                    Email Kordichev to OEB board of directors regarding BCS transaction for treasury shares. Email
-                    Kordichev to OEB board of directors regarding BCS transaction for treasury shares. Email Kordichev
-                    to OEB board of directors regarding BCS transaction for treasury shares. Email Kordichev to OEB
-                    board of directors regarding BCS transaction for treasury shares. Email Kordichev to OEB board of
-                    directors regarding BCS transaction for treasury shares.
-                  </span>
-                  <a href="#" class="download">
-                    <span>Скачать</span>
-                    <img src="img/icons/download-icon.svg" alt="Скачать">
-                  </a>
-                </div>
-
-                <div class="chronology-docs__item">
-                  <img src="img/icons/photo-icon.svg" alt="Фото">
-                  <span>
-                    Credit Support Agreement (CSA) among BCS Cyprus, _______ and Vostochny Bank (Note that agreement was
-                    already signed by Bank on __ October 2014, before the Bank’s board approved the transaction.)
-                  </span>
-                  <a href="#" class="download">
-                    <span>Скачать</span>
-                    <img src="img/icons/download-icon.svg" alt="Скачать">
-                  </a>
-                </div>
-
-                <div class="chronology-docs__item">
-                  <img src="img/icons/pdf-icon.svg" alt="PDF-файл">
-                  <span>
-                    Collateral Account Control Agreement among BCS, Balakus, Danofe (affiliated BCS entity) and Bank
-                    Vostochny.
-                  </span>
-                  <a href="#" class="download">
-                    <span>Скачать</span>
-                    <img src="img/icons/download-icon.svg" alt="Скачать">
-                  </a>
-                </div>
-              </div>
             </div>
           </div>
 
@@ -535,44 +454,6 @@
                   Какая-то новость из 2020....
                 </p>
               </div>
-              <!-- <div class="chronology-docs">
-                <span class="chronology-docs__title">Подтверждающие документы</span>
-
-                <div class="chronology-docs__item">
-                  <img src="img/icons/pdf-icon.svg" alt="PDF-файл">
-                  <span>
-                    Email Kordichev to OEB board of directors regarding BCS transaction for treasury shares.
-                  </span>
-                  <a href="#" class="download">
-                    <span>Скачать</span>
-                    <img src="img/icons/download-icon.svg" alt="Скачать">
-                  </a>
-                </div>
-
-                <div class="chronology-docs__item">
-                  <img src="img/icons/photo-icon.svg" alt="Фото">
-                  <span>
-                    Credit Support Agreement (CSA) among BCS Cyprus, _______ and Vostochny Bank (Note that agreement was
-                    already signed by Bank on __ October 2014, before the Bank’s board approved the transaction.)
-                  </span>
-                  <a href="#" class="download">
-                    <span>Скачать</span>
-                    <img src="img/icons/download-icon.svg" alt="Скачать">
-                  </a>
-                </div>
-
-                <div class="chronology-docs__item">
-                  <img src="img/icons/pdf-icon.svg" alt="PDF-файл">
-                  <span>
-                    Collateral Account Control Agreement among BCS, Balakus, Danofe (affiliated BCS entity) and Bank
-                    Vostochny.
-                  </span>
-                  <a href="#" class="download">
-                    <span>Скачать</span>
-                    <img src="img/icons/download-icon.svg" alt="Скачать">
-                  </a>
-                </div>
-              </div> -->
             </div>
           </div>
 
