--- a/404.html
+++ b/404.html
@@ -17,6 +17,10 @@
         <img src="img/icons/close-icon.svg" alt="Зыкрыть поиск">
       </div>
       <input type="text" class="search-input" placeholder="Что вы ищете?">
+      <div class="search-find">
+        <span>Найти</span>
+        <img src="img/icons/scrollTop-icon.svg" alt="Найти">
+      </div>
     </div>
   </div>
   <div class="menu" id="menu">
@@ -107,7 +111,7 @@
         </span>
         <a href="archive.html" class="notfound-back">
           <img src="img/icons/scrollTop-icon.svg" alt="Назад">
-          <span>обратно</span>
+          <span>назад</span>
         </a>
       </div>
     </section>
