--- a/FAQ.html
+++ b/FAQ.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- <link rel="stylesheet" href="css/progressive-image.css"> -->
-  <link rel="stylesheet" href="css/style.min.css?v=2">
+  <link rel="stylesheet" href="css/style.min.css?v=3">
   <title>Дело Банка Восточный</title>
 </head>
 
@@ -17,6 +17,10 @@
         <img src="img/icons/close-icon.svg" alt="Зыкрыть поиск">
       </div>
       <input type="text" class="search-input" placeholder="Что вы ищете?">
+      <div class="search-find">
+        <span>Найти</span>
+        <img src="img/icons/scrollTop-icon.svg" alt="Найти">
+      </div>
     </div>
   </div>
   <div class="menu" id="menu">
