--- a/archive.html
+++ b/archive.html
@@ -17,6 +17,10 @@
         <img src="img/icons/close-icon.svg" alt="Зыкрыть поиск">
       </div>
       <input type="text" class="search-input" placeholder="Что вы ищете?">
+      <div class="search-find">
+        <span>Найти</span>
+        <img src="img/icons/scrollTop-icon.svg" alt="Найти">
+      </div>
     </div>
   </div>
   <div class="menu" id="menu">
