--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
         <img src="img/icons/close-icon.svg" alt="Зыкрыть поиск">
       </div>
       <input type="text" class="search-input" placeholder="Что вы ищете?">
+      <div class="search-find">
+        <span>Найти</span>
+        <img src="img/icons/scrollTop-icon.svg" alt="Найти">
+      </div>
     </div>
   </div>
 
@@ -315,7 +319,6 @@
                   <span>
                     ЦБ проверит активы банков в иностранных депозитариях
                     <span class="src"><a href="https://www.rbc.ru/">РБК</a></span>
-
 
                   </span>
 
