--- a/event.html
+++ b/event.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- <link rel="stylesheet" href="css/progressive-image.css"> -->
-  <link rel="stylesheet" href="css/style.min.css?v=2">
+  <link rel="stylesheet" href="css/style.min.css?v=3">
   <title>Дело Банка Восточный</title>
 </head>
 
@@ -17,6 +17,10 @@
         <img src="img/icons/close-icon.svg" alt="Зыкрыть поиск">
       </div>
       <input type="text" class="search-input" placeholder="Что вы ищете?">
+      <div class="search-find">
+        <span>Найти</span>
+        <img src="img/icons/scrollTop-icon.svg" alt="Найти">
+      </div>
     </div>
   </div>
   <div class="menu" id="menu">
@@ -100,7 +104,7 @@
       <div class="wrap">
         <a href="archive.html" class="event-back">
           <img src="img/icons/scrollTop-icon.svg" alt="Назад">
-          <span>обратно в архив документов</span>
+          <span>назад</span>
         </a>
         <h2 class="section-title">BCS/PKB Story 2014-2015</h2>
 
@@ -130,7 +134,27 @@
               <span class="chronology-docs__title">Подтверждающие документы</span>
 
               <div class="chronology-docs__item">
+                <img src="img/icons/message-icon.svg" alt="PDF-файл">
+                <span>
+                  Email Kordichev to OEB board of directors regarding BCS transaction for treasury shares.
+                </span>
+                <a href="#" class="download">
+                  <span>Скачать</span>
+                  <img src="img/icons/download-icon.svg" alt="Скачать">
+                </a>
+              </div>
+              <div class="chronology-docs__item">
                 <img src="img/icons/pdf-icon.svg" alt="PDF-файл">
+                <span>
+                  Email Kordichev to OEB board of directors regarding BCS transaction for treasury shares.
+                </span>
+                <a href="#" class="download">
+                  <span>Скачать</span>
+                  <img src="img/icons/download-icon.svg" alt="Скачать">
+                </a>
+              </div>
+              <div class="chronology-docs__item">
+                <img src="img/icons/dw-icon.svg" alt="PDF-файл">
                 <span>
                   Email Kordichev to OEB board of directors regarding BCS transaction for treasury shares.
                 </span>
@@ -153,7 +177,7 @@
               </div>
 
               <div class="chronology-docs__item">
-                <img src="img/icons/pdf-icon.svg" alt="PDF-файл">
+                <img src="img/icons/excel-icon.svg" alt="PDF-файл">
                 <span>
                   Collateral Account Control Agreement among BCS, Balakus, Danofe (affiliated BCS entity) and Bank
                   Vostochny.
