--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- <link rel="stylesheet" href="css/progressive-image.css"> -->
   <link rel="stylesheet" href="css/style.min.css?v=38">
+  <link rel="shortcut icon" href="img/favicon.svg" type="image/x-icon">
   <title>Дело Банка Восточный</title>
 </head>
 
@@ -31,6 +32,9 @@
         <img src="img/icons/close-icon.svg" alt="Зыкрыть меню">
       </div>
       <nav class="menu-nav">
+        <a href="index.html#timeline" class="menu-logo">
+          <img src="img/icons/logo-dark.svg" alt="">
+        </a>
         <a href="index.html" class="menu-nav__item current ">Таймлайн событий</a>
         <a href="archive.html" class="menu-nav__item">Архив документов</a>
         <a href="FAQ.html" class="menu-nav__item">Вопрос&nbsp;&mdash; ответ</a>
@@ -58,8 +62,12 @@
         <span></span>
         <span></span>
       </div>
+      <a href="index.html" class="header-logo">
+        <img src="img/icons/logo.svg" alt="">
+        <img src="img/icons/logo-dark.svg" alt="" class="dark">
+      </a>
       <nav class="header-nav">
-        <a href="index.html" class="header-nav__item current ">Таймлайн событий</a>
+        <a href="index.html#timeline" class="header-nav__item current ">Таймлайн событий</a>
         <a href="archive.html" class="header-nav__item">Архив документов</a>
         <a href="FAQ.html" class="header-nav__item">Вопрос&nbsp;&mdash; ответ</a>
         <a href="#" class="header-nav__item">Фактчек</a>
@@ -169,7 +177,7 @@
       </div>
     </div>
 
-    <section class="chronology">
+    <section class="chronology" id="timeline">
 
       <div class="chronology-nav">
         <div class="chronology-nav__wrap">
