--- a/event.html
+++ b/event.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- <link rel="stylesheet" href="css/progressive-image.css"> -->
   <link rel="stylesheet" href="css/style.min.css?v=4">
+  <link rel="shortcut icon" href="img/favicon.svg" type="image/x-icon">
+
   <title>Дело Банка Восточный</title>
 </head>
 
@@ -29,13 +31,18 @@
         <img src="img/icons/close-icon.svg" alt="Зыкрыть меню">
       </div>
       <nav class="menu-nav">
-        <a href="index.html" class="menu-nav__item ">Таймлайн событий</a>
-        <a href="archive.html" class="menu-nav__item current">Архив документов</a>
+        <a href="index.html#timeline" class="menu-logo">
+          <img src="img/icons/logo-dark.svg" alt="">
+        </a>
+        <a href="index.html" class="menu-nav__item current ">Таймлайн событий</a>
+        <a href="archive.html" class="menu-nav__item">Архив документов</a>
         <a href="FAQ.html" class="menu-nav__item">Вопрос&nbsp;&mdash; ответ</a>
         <a href="#" class="menu-nav__item">Фактчек</a>
       </nav>
+
       <div class="menu-share">
         <span>Поделиться</span>
+
         <a href="https://vk.com" target="_blank" class="menu-share__link icon dark"> <img src="img/icons/vk_dark.svg"
             alt="vk.com"> </a>
         <a href="https://telegram.org" target="_blank" class="menu-share__link icon dark"> <img
@@ -46,6 +53,7 @@
       </div>
     </div>
   </div>
+
   <header class="header fixed white">
     <div class="wrap-fluid">
       <div class="header-burger">
@@ -53,9 +61,13 @@
         <span></span>
         <span></span>
       </div>
+      <a href="index.html" class="header-logo">
+        <img src="img/icons/logo.svg" alt="">
+        <img src="img/icons/logo-dark.svg" alt="" class="dark">
+      </a>
       <nav class="header-nav">
-        <a href="index.html" class="header-nav__item ">Таймлайн событий</a>
-        <a href="archive.html" class="header-nav__item current">Архив документов</a>
+        <a href="index.html#timeline" class="header-nav__item current ">Таймлайн событий</a>
+        <a href="archive.html" class="header-nav__item">Архив документов</a>
         <a href="FAQ.html" class="header-nav__item">Вопрос&nbsp;&mdash; ответ</a>
         <a href="#" class="header-nav__item">Фактчек</a>
       </nav>
@@ -86,9 +98,12 @@
         <a href="https://www.facebook.com" target="_blank" class="header-share__link icon"> <img src="img/icons/fb.svg"
             alt="facebook">
         </a>
+
+
       </div>
       <div class="header-share dark">
         <span>Поделиться</span>
+
         <a href="https://vk.com" target="_blank" class="header-share__link icon dark"> <img src="img/icons/vk_dark.svg"
             alt="vk.com"> </a>
         <a href="https://telegram.org" target="_blank" class="header-share__link icon dark"> <img
@@ -255,6 +270,11 @@
 
         </div>
 
+
+        <div class="gototop">
+          <span>Наверх</span>
+          <img src="img/icons/scrollTop-icon.svg" alt="Вернуться в начало ">
+        </div>
 
       </div>
     </section>
