--- a/FAQ.html
+++ b/FAQ.html
@@ -34,9 +34,9 @@
         <a href="index.html#timeline" class="menu-logo">
           <img src="img/icons/logo-dark.svg" alt="">
         </a>
-        <a href="index.html" class="menu-nav__item current ">Таймлайн событий</a>
+        <a href="index.html" class="menu-nav__item  ">Таймлайн событий</a>
         <a href="archive.html" class="menu-nav__item">Архив документов</a>
-        <a href="FAQ.html" class="menu-nav__item">Вопрос&nbsp;&mdash; ответ</a>
+        <a href="FAQ.html" class="menu-nav__item current">Вопрос&nbsp;&mdash; ответ</a>
         <a href="#" class="menu-nav__item">Фактчек</a>
       </nav>
 
@@ -66,9 +66,9 @@
         <img src="img/icons/logo-dark.svg" alt="" class="dark">
       </a>
       <nav class="header-nav">
-        <a href="index.html#timeline" class="header-nav__item current ">Таймлайн событий</a>
+        <a href="index.html#timeline" class="header-nav__item  ">Таймлайн событий</a>
         <a href="archive.html" class="header-nav__item">Архив документов</a>
-        <a href="FAQ.html" class="header-nav__item">Вопрос&nbsp;&mdash; ответ</a>
+        <a href="FAQ.html" class="header-nav__item current">Вопрос&nbsp;&mdash; ответ</a>
         <a href="#" class="header-nav__item">Фактчек</a>
       </nav>
       <div class="header-search js-toSearch">
